--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <link href="/style/style.css" rel="stylesheet" />
     <script defer type="module" src="/index.js"></script>
   </head>
-  <body></body>
+  <body>
+    hi
+  </body>
 </html>
