solved: find right path

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
       rel="stylesheet"
     />
-    <link href="/style/style.css" rel="stylesheet" />
-    <script defer type="module" src="/index.js"></script>
+    <link href="./style/style.css" rel="stylesheet" />
+    <script defer type="module" src="./index.js"></script>
   </head>
-  <body>
-    hi
-  </body>
+  <body></body>
 </html>
